Should have fixed picture distortion in people.

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -925,3 +925,11 @@ img.progicons {
 
 
 
+.imgadapt {
+  width: 100%;
+  height: auto;
+  min-width: none;
+  max-width: none;
+  min-height: none;
+  max-height: none;
+}
